<resources>
    <string name="app_name">LoginApp</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_sign_up_short">Sign up</string>
    <string name="welcome">"Welcome %1$s!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="do_not_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up.</string>
    <string name="confirm_password_again">Confirm password</string>
    <string name="prompt_username">Username</string>
    <string name="sign_in_using_email">Sign in using email</string>
    <string name="web_client_id">1051298806509-bv9doe257glfmvkm3lf7fokdkhffjije.apps.googleusercontent.com</string>
</resources>